# discord-ollama-agent

./: .env.example  .gitignore  CLAUDE.md  CONTAINER_ACTIONS_GUIDE.md  DOCKER_ARCHITECTURE.md  DOCUMENTATION_GUIDE.md  MASTER_SWITCH_GUIDE.md  NVFP4_RESEARCH.md  README.md  TECHNICAL.md  TROISE-TECHNICAL.md  TROISE.md  docker-compose.app.yml  docker-compose.infra.yml  docker-compose.test.yml  docker-compose.yml  explore_http_request.py  explore_strands_tools.py  strands-sdk.md  transcript-kai-ai-augmentation-system.md
admin-service/: .env.example  Dockerfile  pyproject.toml  pytest.ini  requirements.txt
admin-service/app/: backend_registry.py  config.py  container.py  dependencies.py  main.py  response_parsers.py
admin-service/app/api/: __init__.py  logs.py  metrics.py  models.py  monitoring.py  system.py  users.py  vram.py
admin-service/app/clients/: __init__.py  docker_client.py  vram_client.py
admin-service/app/config/: container_actions.yaml
admin-service/app/interfaces/: __init__.py  protocols.py
admin-service/app/middleware/: audit_log.py  auth.py
admin-service/app/models/: __init__.py  requests.py  responses.py
admin-service/app/repositories/: __init__.py  dynamodb_user_repository.py
admin-service/app/services/: __init__.py  container_action_service.py  health_checker_service.py  log_cleanup_service.py  metrics_aggregator.py  metrics_storage.py  metrics_writer.py  model_service.py  monitoring_aggregator.py  ollama_service.py  system_metrics_service.py  system_service.py  user_service.py  vram_validator.py  webhook_service.py
admin-service/app/utils/: __init__.py  json_encoder.py  metrics_transformer.py
admin-service/scripts/: init_metrics_table.py
admin-service/tests/: README.md  conftest.py  test_api_endpoints.py  test_auth_middleware.py  test_model_service.py  test_user_service.py  test_vram_client.py
auth-service/: .env.admin  Dockerfile  pyproject.toml  requirements.txt  setup_admin.py
auth-service/app/: main.py
auth-service/app/domain/: auth_method.py  user.py
auth-service/app/interfaces/: auth_method_repository.py  auth_provider.py  user_repository.py
auth-service/app/models/: requests.py  responses.py
auth-service/app/providers/: password_provider.py
auth-service/app/repositories/: auth_method_repository.py  user_repository.py
auth-service/app/services/: authentication_service.py
auth-service/app/utils/: crypto.py  jwt.py
auth-service/tests/: conftest.py  test_api.py  test_authentication_service.py  test_crypto.py  test_jwt.py  test_password_provider.py
discord-bot/: .env.example  Dockerfile  pyproject.toml
discord-bot/bot/: __init__.py  admin_commands.py  animation_manager.py  client.py  config.py  main.py  message_handler.py  minio_client.py  utils.py  websocket_manager.py
discord-bot/tests/: test_bot.py
fastapi-service/: .env.example  Dockerfile  MODEL-TOOL-SUPPORT.md  pyproject.toml  pytest.ini
fastapi-service/app/: __init__.py  config.py  dependencies.py  main.py
fastapi-service/app/api/: admin.py  chat_ws.py  files.py  internal.py  monitoring.py  user.py  websocket.py
fastapi-service/app/config/: __init__.py
fastapi-service/app/extensions/: __init__.py  discord_extension.py  interface.py  orchestrator.py
fastapi-service/app/implementations/: __init__.py  conversation_storage.py  memory_queue.py  model_factory.py  strands_llm.py  user_preferences_storage.py  user_storage.py  vector_storage.py  websocket_manager.py
fastapi-service/app/interfaces/: __init__.py  chunking.py  embedding.py  llm.py  processing_strategy.py  queue.py  storage.py  websocket.py
fastapi-service/app/models/: requests.py  responses.py
fastapi-service/app/preprocessing/: __init__.py  file_context.py
fastapi-service/app/prompts/: __init__.py  composer.py  registry.py
fastapi-service/app/routing/: __init__.py  route.py  route_handler.py  router.py
fastapi-service/app/services/: artifact_post_processor.py  chunking_service.py  config_manager.py  context_manager.py  embedding_service.py  file_extraction_router.py  file_service.py  input_artifact_detector.py  ocr_service.py  orchestrator.py  output_artifact_detector.py  preference_resolver.py  profile_manager.py  queue_worker.py  response_formatters.py  router_service.py  strategy_registry.py  summarization_service.py  token_tracker.py
fastapi-service/app/strategies/: __init__.py  output_artifact_strategy.py
fastapi-service/app/streaming/: __init__.py  filters.py  logger.py  processor.py
fastapi-service/app/tools/: __init__.py  file_tools.py  strands_tools_wrapped.py  web_tools.py
fastapi-service/app/utils/: health_checks.py  message_splitter.py  model_utils.py  validators.py
fastapi-service/ollama_discord_fastapi.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
fastapi-service/tests/: TESTING.md  __init__.py  conftest.py  test_api.py  test_chunking_service.py  test_discord_extension.py  test_dynamodb_storage.py  test_embedding_service.py  test_extension_integration.py  test_extensions.py  test_file_extraction_router.py  test_file_service.py  test_file_service_integration.py  test_file_tools.py  test_image_extractor.py  test_image_ocr_extension.py  test_memory_queue.py  test_multi_backend.py  test_ocr_service.py  test_pdf_extractor.py  test_preprocessing.py  test_rag_README.md  test_router_integration.py  test_router_service.py  test_services.py  test_strands_tools_wrapped.py  test_text_extractor.py  test_utils.py  test_vector_storage.py  test_web_tools_rag.py
fastapi-service/tests/test_vram/: README.md  __init__.py  conftest.py  test_backend_managers.py  test_crash_tracker.py  test_eviction_strategies.py  test_integration.py  (+3 more)
logging-service/: Dockerfile  pyproject.toml  server.py
monitoring-service/: Dockerfile  alerts.py  config.py  dashboard.py  database.py  health_checker.py  log_cleanup.py  monitor.py  pyproject.toml  requirements.txt
monitoring-service/templates/: index.html
troise-ai/: CLAUDE.md  Dockerfile  pyproject.toml
troise-ai/app/: main.py
troise-ai/config/: config.yaml
troise-ai/docker/: README.md
troise-ai/tests/: conftest.py
(+547 files in other folders)
