[project]
name = "trollama-auth-service"
version = "2.0.0"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "bcrypt>=4.1.2",
    "PyJWT>=2.8.0",
    "aioboto3>=13.0.1",
    "pydantic>=2.5.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "httpx>=0.25.2",
    "moto[dynamodb]>=4.2.0",
]
