[project]
name = "trollama-logging-service"
version = "0.1.0"
description = "Centralized logging service for Discord Trollama Agent"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0"
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
