[project]
name = "troise-ai"
version = "0.1.0"
description = "TROISE AI - Personal AI Augmentation System"
requires-python = ">=3.11"
dependencies = [
    # Core framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=13.0",

    # Strands Agents (agent loop, tools, multi-agent, swarm)
    "strands-agents>=1.0.0",

    # Strands model backends
    "ollama>=0.4.0",
    "openai>=1.50.0",

    # DynamoDB
    "aiobotocore>=2.15.0",
    "aioboto3>=13.0.0",

    # File operations
    "aiofiles>=24.0.0",

    # SSH for DGX Spark
    "asyncssh>=2.18.0",

    # Utilities
    "pyyaml>=6.0",
    "aiohttp>=3.10.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",

    # Auth
    "pyjwt>=2.8.0",

    # RAG: Web content extraction & chunking
    "beautifulsoup4>=4.12.0",
    "langchain-text-splitters>=0.3.0",
    "tiktoken>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
]

# Image generation with FLUX 2.dev
# Install with: uv sync --extra diffusion
# Reference: https://build.nvidia.com/spark/comfy-ui/instructions
diffusion = [
    "torch>=2.5.0",
    "torchvision>=0.20.0",
    "diffusers>=0.32.0",
    "transformers>=4.47.0",
    "accelerate>=1.2.0",
    "sentencepiece>=0.2.0",  # For FLUX tokenizer
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "aioresponses>=0.7.8",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

# =============================================================================
# uv Configuration - PyTorch CUDA 13.0 for DGX Spark (Blackwell/SM_121)
# =============================================================================

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
# DGX Spark: ARM64/aarch64, CUDA 13.0, SM_121 Blackwell, unified memory
torch = { index = "pytorch-cu130", extra = "diffusion" }
torchvision = { index = "pytorch-cu130", extra = "diffusion" }
